--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,10 @@
   },
   "require": {
     "php": ">=7.2",
-    "ueef/typer": "^0.1.1",
-    "ueef/packable": "^0.4.0",
-    "ueef/assignable": "^0.1.1",
-    "openzipkin/zipkin": "^1.3",
-    "ueef/encoder": "^0.0.1"
+    "ueef/typer": "^0.1",
+    "ueef/encoder": "^0.0",
+    "ueef/packable": "^0.4",
+    "ueef/assignable": "^0.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.3"
